# aaabbbb

./: architecture_diagram.puml  docker-compose.yml  usecase_diagram.puml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  rate_limit.py  redis_client.py
backend/app/api/routes/: __init__.py  alerts.py  audit.py  auth.py  bans.py  blocker.py  dashboard.py  demo.py  events.py  profiles.py  report.py  settings.py  system.py
backend/app/core/: celery_app.py  config.py  database.py  redis_client.py  security.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 0001_initial.py  0002_settings.py  0003_profile_risk_reasons.py
backend/app/models/: alert.py  audit.py  ban.py  event.py  profile.py  settings.py  user.py
backend/app/schemas/: auth.py  ban.py  event.py
backend/app/services/: aggregate.py  alerting.py  fingerprint.py  net.py  scoring.py  settings.py
backend/app/tasks/: cleanup.py  jobs.py
backend/tests/: test_alert_dedup_sqlite.py  test_scoring.py  test_whitelist.py
blocker/: Dockerfile
blocker/haproxy/: haproxy.cfg
blocker/nginx/: nginx.conf
blocker/scripts/: apply_bans.sh  entrypoint.sh  whitelist.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  router.ts
frontend/src/api/: client.ts  dashboard.ts
frontend/src/components/: PieChart.vue  (+3 more)
honeypot-http/: Dockerfile  app.py
scripts/: demo.sh  ssh_bruteforce_sim.py
worker/: Dockerfile
(+15 files in other folders)
